--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" href="image/skyline.png" />
+    <link rel="icon" type="image/png" href="/skyline.png" />
+    <link rel="apple-touch-icon" href="/skyline.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Skyline Weather Application" />
