Update favicon and apple-touch-icon paths in index.html

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/skyline.png" />
-    <link rel="apple-touch-icon" href="/skyline.png" />
+    <link rel="icon" type="image/png" href="/weather-ios-logo.png" />
+    <link rel="apple-touch-icon" href="/weather-ios-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Skyline Weather Application" />
 
-    <title>Skyline</title>
+    <title>Skyline weather App</title>
   </head>
   <body>
     <div id="root"></div>
